# django-project-template

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  conftest.py  docker-compose.override.yml  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: ci.yml
apps/common/: exceptions.py  health.py  mixins.py  models.py  pagination.py
apps/common/tests/: test_health.py
apps/crm/: forms.py  urls.py  views.py
apps/crm/tests/: test_crm.py
apps/users/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
apps/users/tests/: factories.py  test_users.py
config/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py  test.py
docker/: entrypoint.sh
static/css/: app.css
tasks/: todo.md
templates/: base.html
templates/allauth/layouts/: base.html
templates/crm/: user_confirm_delete.html  user_detail.html  user_form.html  user_list.html
templates/crm/partials/: _user_row.html  _user_table.html
templates/includes/: _messages.html
